fixed scoring bug and more
fixed scoring bug, fixed not being able to generate new words on a challenge link, fixed menu too large on small screens.

--- a/styles/sidepanel.css
+++ b/styles/sidepanel.css
@@ -67,11 +67,27 @@ anything not involving this sidepanel. */
     width: 0;
 }
 /* used by javascript to move the menu */
+/* controls the */
 .openPanel {
     transform: translate(calc(var(--panelWidth) - var(--panelBorderWidth)));
 }
-.openPanel2 {
-    transform: translate(455px);
+/* controls the button */
+.openPanel2 {   
+    transform: translate(calc(var(--panelWidth) - 45px));
+}
+
+@media only screen and (max-width: 500px) {
+    :root {
+        --panelWidth: 100%;
+    }
+    .openPanel2 {
+        transform: none;
+        margin-left: calc(var(--panelWidth) - 45px);
+    }
+    /* #panelToggle {
+        position: fixed;
+        margin-left: calc(100% - 40px);
+    } */
 }
 
 /* PANEL COMPONENTS */
@@ -133,7 +149,9 @@ anything not involving this sidepanel. */
     text-decoration: underline;
 }
 ul {
-    width: fit-content;
+    box-sizing: border-box;
+    position: relative;
+    width: 60%;
     margin: auto;
 }
 
@@ -145,15 +163,24 @@ ul > label {
 }
 
 ul > label > input {
+    box-sizing: border-box;
+    padding: 5px 10px 5px 10px;
     font-family: monospace;
-    padding: 5px 20px 5px 20px;
     font-size: 1.2rem;
     border: none;
     border-radius: 5px;
+    width: 100%;
 }
 
-label[for="generate"], label[for="generateID"], label[for="Copy"] {
-    text-align: right;
+#seed {
+    font-size: 1rem;
+    /* width: 100%; */
+}
+
+.button {
+    position: relative;
+    width: fit-content;
+    margin-left: auto;
 }
 #generate, #generateID, #Copy {
     padding: 5px 20px 5px 20px;
